--- a/index.html
+++ b/index.html
@@ -5,10 +5,264 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css">
     <title>Dtour</title>
 </head>
 <body>
+    <!-- NAVBAR -->
 
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container px-5 py-2">
+            <a href="#" class="navbar-brand">
+                Dtour <i class="fa fa-plane"></i>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Packages</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Pricing</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- CAROUSEL -->
+    <section id="showcase">
+        <div class="carousel slide" id="myCarousel" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" ></li>
+                <li data-bs-target="#myCarousel" data-bs-slide-to="1" ></li>
+                <li data-bs-target="#myCarousel" data-bs-slide-to="2" ></li>
+            </ol>
+            <div class="carousel-inner text-light">
+                <div class="carousel-item carousel-image-1 active">
+                    <div class="container m-5 p-5 text-end d-none d-sm-block">
+                        <h1 class="display-2">Heading Example 1</h1>  
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="btn btn-danger">SignUp</a>
+                    </div>
+                </div>
+                <div class="carousel-item carousel-image-2">
+                    <div class="container m-5 p-5 text-end d-none d-sm-block">
+                        <h1 class="display-2">Heading Example 2</h1>
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="btn btn-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="carousel-item carousel-image-3">
+                    <div class="container m-5 p-5 text-end d-none d-sm-block">
+                        <h1 class="display-2">Heading Example 3</h1>
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="btn btn-success">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <a href="#myCarousel" class="carousel-control-prev" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a href="#myCarousel" class="carousel-control-next" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+        </div>
+    </section>
+    
+    <!-- HOME ICONS -->
+    <section id="home-icons" class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 mb-4 text-center">
+                    <i class="fa mb-2 fa-globe"></i>
+                    <h3>Travel the world</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="col-md-4 mb-4 text-center">
+                    <i class="fa mb-2 fa-users"></i>
+                    <h3>With Loved Ones</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="col-md-4 mb-4 text-center">
+                    <i class="fa mb-2 fa-tree"></i>
+                    <h3>Lots Of Adventure</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- PARALLEX AND MODAL -->
+    <section id="parallex-modal" class="py-5">
+        <div class="container">
+            <h1 class="display-4">Confused about where to go next?</h1>
+            <a href="#" class="text-light text-decoration-none display-6" data-bs-toggle="modal" data-bs-target="#mobileNumber">
+                Talk to our experts <i class="fa fa-phone"></i>
+            </a>
+        </div>
+    </section>
+
+    <div class="modal fade" id="mobileNumber">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">We will call you</h5>
+                    <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <label class="form-label">Add Phone Number</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary" type="button">Submit</button> 
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- INFORMATION -->
+    <section id="info" class="py-5">
+        <div class="container">
+            <div class="row justify-content-evenly">
+                <div class="col-md-4 align-self-center">
+                    <h1>LOREM</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis nam corrupti deserunt, animi vero veniam.</p>
+                    <a href="#" class="text-dark text-decoration-none float-end" data-bs-toggle="modal" data-bs-target="#lightboxModal">
+                        <strong>Check out our photos <i class="fa fa-camera"></i></strong>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <img src="img/travel-collage.jpg" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="modal fade" id="lightboxModal">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
+                </div>
+
+                <div class="modal-body">
+                    <!-- CAROUSEL -->
+                    <div class="carousel slide" id="lightboxCarousel" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="img-fluid" src="img/lightbox/01.jpg">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="img-fluid" src="img/lightbox/02.jpg">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="img-fluid" src="img/lightbox/03.jpeg">
+                            </div>
+                        </div>
+                        <a href="#lightboxCarousel" class="carousel-control-prev" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a href="#lightboxCarousel" class="carousel-control-next" data-bs-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- FAQ -->
+
+    <section id="faq" class="py-5">
+        <div class="container">
+            <h1 class="display-3 text-center pb-3 mb-5 border-bottom">
+                F.A.Q
+            </h1>
+            <div class="accordion" id="faqAccordian">
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, enim.
+                        </button>
+                    </h2>
+                    <div class="accordion-collapse collapse" id="collapseOne">
+                        <div class="accordion-body">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae maiores tenetur aliquam quam, fugiat libero tempora, doloribus fuga aspernatur hic necessitatibus repellendus dolor modi quis quia iste voluptates, vitae dolores.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, enim.
+                        </button>
+                    </h2>
+                    <div class="accordion-collapse collapse" id="collapseTwo">
+                        <div class="accordion-body">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae maiores tenetur aliquam quam, fugiat libero tempora, doloribus fuga aspernatur hic necessitatibus repellendus dolor modi quis quia iste voluptates, vitae dolores.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, enim.
+                        </button>
+                    </h2>
+                    <div class="accordion-collapse collapse" id="collapseThree">
+                        <div class="accordion-body">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae maiores tenetur aliquam quam, fugiat libero tempora, doloribus fuga aspernatur hic necessitatibus repellendus dolor modi quis quia iste voluptates, vitae dolores.
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- NEWSLETTER -->
+
+    <section id="newsletter" class="text-center text-white bg-dark bg-gradient p-5">
+        <div class="container">
+            <h1>SignUp for our newsletter</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sapiente porro soluta impedit nulla repellendus cum minus fuga assumenda a.</p>
+            <form class="form row justify-content-center">
+                <div class="col-md-3 m-1">
+                    <input type="text" class="form-control" placeholder="Name">
+                </div>
+                <div class="col-md-3 m-1">
+                    <input type="email" class="form-control" placeholder="Email">
+                </div>
+                <div class="col-md-1 m-1">
+                    <button class="btn btn-primary" data-bs-toggle="tooltip" data-bs-placement="right" title="Tooltip on right">Submit</button>
+                </div>    
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer -->
+
+    <footer id="main-footer" class="text-center p-4 bg-dark text-white">
+        <p>Copyright 2021 &copy; CodersGala</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script>
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+  return new bootstrap.Tooltip(tooltipTriggerEl)
+})
+    </script>
 </body>
 </html>
